--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script>
+
 
    // var objs = .map(JSON.parse)
 
@@ -47,14 +49,14 @@
             }
         }
 
-
+        document.write(predmety[1].UUID)
 
     });
 
 
 
 
-    document.write(predmety)
+
 
 </script>
 
