--- a/index.html
+++ b/index.html
@@ -6,31 +6,18 @@
 </head>
 <body>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script>
 
+    'use strict';
 
-   // var objs = .map(JSON.parse)
+    const fs = require('fs');
+
+    let rawdata = fs.readFileSync('data.json');
+    let student = JSON.parse(rawdata);
+    document.write(student);
+
 
    /*
-   $.getJSON("test.json", function(json) {
-       console.log(json); // this will show the info it in firebug console
-   });
-
-   let object;
-   let httpRequest = new XMLHttpRequest(); // asynchronous request
-   httpRequest.open("GET", "data.json", true);
-   httpRequest.send();
-   httpRequest.addEventListener("readystatechange", function() {
-       if (this.readyState === this.DONE) {
-           // when the request has completed
-           object = JSON.parse(this.response);
-       }
-   });
-
-    */
-
-
     var predmety = $.getJSON('data.json', function (json) {
         var array = [];
         for (var key in json) {
@@ -53,6 +40,8 @@
 
     });
 
+
+    */
 
 
 
