--- a/index.html
+++ b/index.html
@@ -2,19 +2,148 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Convert JSON Data to HTML Table</title>
+    <style>
+        th, td, p, input {
+            font:19px Verdana;
+        }
+        table, th, td
+        {
+            border: solid 1px #DDD;
+            border-collapse: collapse;
+            padding: 2px 3px;
+            text-align: center;
+        }
+        th {
+            font-weight:bold;
+        }
+    </style>
+
 </head>
-<body onload="renderHello()">
-<div id="target">Loading...</div>
-<script id="template" type="x-tmpl-mustache">
-      Hello {{ name }}!
-    </script>
+
+<body>
+<script>
+    /*
+    let data;
+    let rawFile;
+
+     */
+
+    let data = {
+        "Floor"  :  "",
+        "Room"   :  "",
+        "EventName"   :  "",
+        "EventTime"   :  "",
+        "Presentation"      :  true,
+        "DateStart"   :  "",
+        "DateEnd"   :  "",
+        "UUID"   :  "",
+
+    };
+    let rawFile = {
+        "Floor"  :  "",
+        "Room"   :  "",
+        "EventName"   :  "",
+        "EventTime"   :  "",
+        "Presentation"      :  true,
+        "DateStart"   :  "",
+        "DateEnd"   :  "",
+        "UUID"   :  "",
+
+    };
+
+    data.async = false;
+    rawFile.async = false;
 
 
-<script type="application/json" src="data.json"></script>
-<script type="text/javascript" src="test.js"></script>
-<script src="https://unpkg.com/mustache@latest"></script>
-<script src="test.js"></script>
+
+
+    function ReadTextFile(file, callback) {
+        rawFile = new XMLHttpRequest();
+        rawFile.overrideMimeType("application/json");
+        rawFile.open("GET", file, true);
+        rawFile.onreadystatechange = function() {
+            if (rawFile.readyState === 4 && rawFile.status == "200") {
+                callback(rawFile.responseText);
+            }
+        }
+        rawFile.send(null);
+    }
+
+    function CreateTableFromJSON() {
+        ReadTextFile("data.json", function(text) {
+            data = JSON.parse(text);
+            console.log(data);
+        });
+
+        // EXTRACT VALUE FOR HTML HEADER.
+        var col = [];
+        for (var i = 0; i < data.length; i++) {
+            for (var key in data[i]) {
+                if (col.indexOf(key) === -1) {
+                    col.push(key);
+                }
+            }
+        }
+
+        // CREATE DYNAMIC TABLE.
+        var table = document.createElement("table");
+
+        // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
+
+        var tr = table.insertRow(-1);                   // TABLE ROW.
+
+        for (var i = 0; i < col.length ; i++) {
+            var th = document.createElement("th");      // TABLE HEADER.
+            th.innerHTML = col[i];
+            tr.appendChild(th);
+        }
+
+        // ADD JSON DATA TO THE TABLE AS ROWS.
+        for (var i = 0; i < data.length; i++) {
+
+            tr = table.insertRow(-1);
+
+            for (var j = 0; j < col.length ; j++) {
+                var tabCell = tr.insertCell(-1);
+                tabCell.innerHTML = data[i][col[j]];
+            }
+        }
+
+        // FINALLY ADD THE NEWLY CREATED TABLE WITH JSON DATA TO A CONTAINER.
+        var divContainer = document.getElementById("showData");
+        divContainer.innerHTML = "";
+        divContainer.appendChild(table);
+
+    }
+
+
+</script>
 
 
 </body>
+<footer>
+
+
+
+
+<script> CreateTableFromJSON();</script>
+
+
+
+
+
+
+
+
+<input type="button" onclick="CreateTableFromJSON()" value="Create Table From JSON" />
+<p id="showData"></p>
+
+</footer>
+
+
+
+
+
+
 </html>
